@@ -1,3 +1,5 @@
+11/20/13 tweak all 'diluted' solute colors
+11/20/13 change 'Drain Cleaner' color to toilet-bowl-cleaner blue
 11/19/13 fix 'reset all' for 'Basics' screen
 11/19/13 use same color as beers-law-lab for water
 11/19/13 switch to a color range for solutes
